(1) files/site-init.el: (New)     Have this file as like another emacs variants. (2) Update PLIST syncing upstream.
(3) Review options.mk to process x11 or nextstep selection
    correctly.
    - 'dbus gnutls imagemagick' are x11/nextstep independent
    - 'svg gconf xaw3d xft2 gtk' are only with x11
    - '-x11 -svg -gconf -xaw3d -xft2' will result nox11 version
    - Have test combination at the bottom.
    - Have outline 'Local Variables:' for editing with Emacs.

(will check nextstep after this commit, sorry).

--- a/emacs-current/Makefile
+++ b/emacs-current/Makefile
@@ -52,7 +52,7 @@ CONF_FILES_PERMS+=	/dev/null ${VARBASE}/games/emacs/tetris-scores ${GAMEOWN:Q} $
 CHECK_WRKREF_SKIP+=	bin/emacs
 CHECK_WRKREF_SKIP+=	bin/emacs-${PKGVERSION_NOREV}
 
-FILESDIR=	${.CURDIR}/../../editors/emacs/files
+FILESDIR=	${.CURDIR}/files
 
 # Check some related libraries for inclusion.
 MESALIB_VERSION!=	\
