Switch to bl3 version of the PREFIX. Pointed by <wiz> - many thanks, Thomas!

--- a/R-MySQL/Makefile
+++ b/R-MySQL/Makefile
@@ -12,7 +12,7 @@ LICENSE=	gnu-gpl-v2
 R_PKGNAME=	RMySQL
 R_PKGVER=	0.9-3
 
-CONFIGURE_ARGS+=	--with-mysql-dir=${PREFIX}
+CONFIGURE_ARGS+=	--with-mysql-dir=${BUILDLINK_PREFIX.mysql-client}
 USE_LANGUAGES=		c
 
 DEPENDS+=	R-DBI>=0.2.2:../../math/R-DBI
