Upgrade to latest release

--- a/armadillo/Makefile
+++ b/armadillo/Makefile
@@ -1,13 +1,16 @@
 # $NetBSD$
 
-DISTNAME=	armadillo-3.4.4
+# DISTNAME=	armadillo-3.4.4
+DISTNAME=	armadillo-3.800.1
 CATEGORIES=	math
 MASTER_SITES=   ${MASTER_SITE_SOURCEFORGE:=arma/}
 
 MAINTAINER=	jwbacon@tds.net
 HOMEPAGE=	http://sourceforge.net/projects/arma/
 COMMENT=	C++ linear algebra library
-LICENSE=	gnu-lgpl-v3
+# LICENSE=	gnu-lgpl-v3
+# Starting with v3.800, using Mozilla Public License 2.0
+LICENSE=	mpl-2.0
 
 USE_LANGUAGES+= c c++
 USE_CMAKE=	yes
