--- a/SDL2/Makefile
+++ b/SDL2/Makefile
@@ -2,8 +2,8 @@
 #
 
 REVISION=	6940
-DISTNAME=	SDL-2.0.0.${REVISION}
-PKGNAME=	${DISTNAME:S/SDL/SDL2/1}
+DISTNAME=	SDL-2.0.0-${REVISION}
+PKGNAME=	${DISTNAME:S/SDL/SDL2/1:S/0-/0./1}
 CATEGORIES=	devel
 MASTER_SITES=	http://www.libsdl.org/tmp/
 
