Path to distfile changed on master site

--- a/py-fiat/Makefile
+++ b/py-fiat/Makefile
@@ -1,9 +1,9 @@
 # $NetBSD$
 #
 
-DISTNAME=	fiat-${MMVERSION}.0
+DISTNAME=	fiat-${MMVERSION}
 CATEGORIES=	math python
-MASTER_SITES=	http://launchpad.net/fiat/${MMVERSION}.x/${MMVERSION}.0/+download/
+MASTER_SITES=	http://launchpad.net/fiat/${MMVERSION}.x/release-${MMVERSION}/+download/
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 
 MAINTAINER=	jwbacon@tds.net
