Needs rarian. Likely fixes error in kristerw's bulk build. Also, fix python interpreter in two files.

--- a/py-jokosher/Makefile
+++ b/py-jokosher/Makefile
@@ -24,6 +24,8 @@ SUBST_MESSAGE.share=	Fixing PREFIX/share path.
 SUBST_STAGE.share=	pre-install
 SUBST_SED.share=	-e 's,/usr/share/,${PREFIX}/share/,g'
 
+REPLACE_PYTHON+=	Jokosher/JokosherApp.py Jokosher/Profiler.py
+
 PY_PATCHPLIST=		yes
 
 do-build:
@@ -32,6 +34,7 @@ do-build:
 do-install:
 	cd ${WRKSRC} && ${SETENV} ${INSTALL_ENV} ${PYTHONBIN} setup.py install --root=${DESTDIR}
 
+.include "../../textproc/rarian/buildlink3.mk"
 .include "../../sysutils/desktop-file-utils/desktopdb.mk"
 .include "../../lang/python/application.mk"
 .include "../../lang/python/extension.mk"
