--- a/libzrtpcpp/Makefile
+++ b/libzrtpcpp/Makefile
@@ -1,13 +1,13 @@
 # $NetBSD$
 
-DISTNAME=		libzrtpcpp-2.0.0
-CATEGORIES=		net
-MASTER_SITES=		${MASTER_SITE_GNU:=ccrtp/}
+DISTNAME=	libzrtpcpp-2.3.2
+CATEGORIES=	net
+MASTER_SITES=	${MASTER_SITE_GNU:=ccrtp/}
 
-MAINTAINER=		pkgsrc-users@NetBSD.org
-HOMEPAGE=		http://wiki.gnutelephony.org/
-COMMENT=		ZRTP extension for GNU ccRTP
-LICENSE=		gnu-gpl-v3
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	http://wiki.gnutelephony.org/
+COMMENT=	ZRTP extension for GNU ccRTP
+LICENSE=	gnu-gpl-v3
 
 USE_PKGLOCALEDIR=	yes
 USE_TOOLS+=		pkg-config
@@ -19,6 +19,7 @@ PKG_DESTDIR_SUPPORT=	destdir
 
 BUILDLINK_API_DEPENDS.openssl+=	openssl>=0.9.7i
 
+.include "../../mk/pthread.buildlink3.mk"
 .include "../../wip/ccrtp/buildlink3.mk"
 .include "../../security/openssl/buildlink3.mk"
 .include "../../security/libgcrypt/buildlink3.mk"
