Makefile:   fix a mismatch between `lintpkgsrc -i` and package name, sorry. options.mk:   change for option description.

--- a/xmonad-contrib/Makefile
+++ b/xmonad-contrib/Makefile
@@ -1,6 +1,7 @@
 # $NetBSD$
-DISTNAME=	xmonad-contrib-${VERSION}
-VERSION=	0.11
+
+DISTNAME=	xmonad-contrib-0.11
+PKGNAME=	${DISTNAME}
 PKGREVISION=    1
 CATEGORIES=	wm
 
