Adjust with renaming ghostscript to ghostscript-gpl

--- a/ghostscript-cidfonts/Makefile
+++ b/ghostscript-cidfonts/Makefile
@@ -10,7 +10,7 @@ MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	CIDFont resources for Ghostscript
 
 DEPENDS+=	adobe-cidfonts>=20000901:../../fonts/adobe-cidfonts
-DEPENDS+=	ghostscript-[0-9]*:../../wip/ghostscript-gpl
+DEPENDS+=	ghostscript-gpl-[0-9]*:../../wip/ghostscript-gpl
 
 GHOSTSCRIPT_REQD=	6.53
 .include	"../../wip/ghostscript-gpl/Makefile.common"
