added options.mk, to be able to some options

--- a/hs-xmobar/Makefile
+++ b/hs-xmobar/Makefile
@@ -1,5 +1,4 @@
 # $NetBSD$
-#
 
 DISTNAME=	xmobar-0.16
 CATEGORIES=	sysutils
@@ -7,6 +6,8 @@ CATEGORIES=	sysutils
 MAINTAINER=	szptvlfn@a-net.email.ne.jp
 COMMENT=	Xmobar is a minimalistic text based status bar
 LICENSE=	modified-bsd
+
+.include "options.mk"
 
 .include "../../x11/libX11/buildlink3.mk"
 .include "../../wip/hs-mtl/buildlink3.mk"
