--- a/gbase/Makefile
+++ b/gbase/Makefile
@@ -15,13 +15,13 @@ INSTALLATION_DIRS+=	bin
 
 BUILD_TARGET=	gbase
 
-CFLAGS+=	-I${BUILDLINK_PREFIX.gtk}/include/gtk-1.2 \
-		-I${BUILDLINK_PREFIX.glib2}/include/glib/glib-2.0 \
-		-I${BUILDLINK_PREFIX.glib2}/lib/glib-2.0/include \
-		-I${BUILDLINK_PREFIX.cairo}/include/cairo \
-		-I${BUILDLINK_PREFIX.pango}/include/pango-1.0 \
-		-I${BUILDLINK_PREFIX.gtk}/lib \
-		-I${BUILDLINK_PREFIX.atk}/include/atk-1.0
+CFLAGS+=	-I${BUILDLINK_PREFIX.gtk}/include/gtk-1.2
+CFLAGS+=	-I${BUILDLINK_PREFIX.glib2}/include/glib/glib-2.0
+CFLAGS+=	-I${BUILDLINK_PREFIX.glib2}/lib/glib-2.0/include
+CFLAGS+=	-I${BUILDLINK_PREFIX.cairo}/include/cairo
+CFLAGS+=	-I${BUILDLINK_PREFIX.pango}/include/pango-1.0
+CFLAGS+=	-I${BUILDLINK_PREFIX.gtk}/lib
+CFLAGS+=	-I${BUILDLINK_PREFIX.atk}/include/atk-1.0
 
 do-install:
 		${INSTALL_PROGRAM} ${WRKSRC}/gbase ${DESTDIR}${PREFIX}/bin/gbase
