Update maintainer's address

--- a/pydance/Makefile
+++ b/pydance/Makefile
@@ -7,7 +7,7 @@ PKGREVISION=		4
 CATEGORIES=		games
 MASTER_SITES=		http://offload1.icculus.org/pyddr/
 
-MAINTAINER=		shattered@users.sourceforge.net
+MAINTAINER=		shattered@NetBSD.org
 HOMEPAGE=		http://icculus.org/pyddr/
 COMMENT=		Simulator of Dance Dance Revolution and similar games
 LICENSE=		mit
