Try to fix dependency issues in previous.

--- a/innotop/Makefile
+++ b/innotop/Makefile
@@ -12,7 +12,7 @@ LICENSE=	gnu-gpl-v2
 
 DEPENDS+=	p5-Term-ReadKey>=2.10:../../devel/p5-Term-ReadKey
 DEPENDS+=	p5-DBI>=1.13:../../databases/p5-DBI
-DEPENDS+=	p5-DBD-{mysql,percona}*>=1.0:../../databases/p5-DBD-mysql
+DEPENDS+=	p5-DBD-{mysql,percona}*-[0-9]*:../../databases/p5-DBD-mysql
 
 PERL5_PACKLIST=	auto/innotop/.packlist
 REPLACE_PERL=	innotop
