--- a/hs-contravariant/Makefile
+++ b/hs-contravariant/Makefile
@@ -1,7 +1,7 @@
 # $NetBSD$
 #
 
-DISTNAME=	contravariant-0.1.3
+DISTNAME=	contravariant-0.4
 CATEGORIES=	math
 
 MAINTAINER=	pho@cielonegro.org
@@ -9,5 +9,7 @@ COMMENT=	Haskell 98 contravariant functors
 LICENSE=	modified-bsd
 
 .include "../../wip/mk/haskell.mk"
+.include "../../wip/hs-tagged/buildlink3.mk"
 .include "../../wip/hs-transformers/buildlink3.mk"
+.include "../../wip/hs-transformers-compat/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
