--- a/Eina/Makefile
+++ b/Eina/Makefile
@@ -3,6 +3,7 @@
 
 DISTNAME=	eina-0.14.0
 PKGNAME=	${DISTNAME:S/e/E/1}
+PKGREVISION=	1
 CATEGORIES=	multimedia
 MASTER_SITES=	http://launchpad.net/eina/trunk/0.14.0/+download/
 FETCH_USING=	curl
@@ -31,7 +32,7 @@ REPLACE_PYTHON=		eina/lastfm/lastfmsubmitd/lastfmsubmitd
 .include "../../devel/pango/buildlink3.mk"
 .include "../../databases/sqlite3/buildlink3.mk"
 BUILDLINK_API_DEPENDS.libnotify+=	libnotify>=0.7.0
-.include "../../wip/libnotify/buildlink3.mk"
+.include "../../sysutils/libnotify07/buildlink3.mk"
 # XXX Needs clutter-gtk-1.0
 # XXX which needs a new version of clutter
 # XXX which needs cogl which is currently broken
