wip/libuuid was removed; use devel/libuuid instead.

--- a/cinelerra/Makefile
+++ b/cinelerra/Makefile
@@ -54,7 +54,7 @@ USE_LIBTOOL=		yes
 .include "../../graphics/png/buildlink3.mk"
 .include "../../graphics/tiff/buildlink3.mk"
 
-.include "../../wip/libuuid/buildlink3.mk"
+.include "../../devel/libuuid/buildlink3.mk"
 
 .include "../../devel/zlib/buildlink3.mk"
 .include "../../mk/pthread.buildlink3.mk"
