--- a/hs-void/Makefile
+++ b/hs-void/Makefile
@@ -1,7 +1,6 @@
 # $NetBSD$
-#
 
-DISTNAME=	void-0.5.12
+DISTNAME=	void-0.6
 CATEGORIES=	devel
 
 MAINTAINER=	szptvlfn@a-net.email.ne.jp
@@ -11,5 +10,6 @@ LICENSE=	modified-bsd
 
 
 .include "../../wip/mk/haskell.mk"
+.include "../../wip/hs-hashable/buildlink3.mk"
 .include "../../wip/hs-semigroups/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
