Fix interpretter in dshbak

--- a/pdsh/Makefile
+++ b/pdsh/Makefile
@@ -16,6 +16,8 @@ PKG_DESTDIR_SUPPORT=	user-destdir
 GNU_CONFIGURE=	yes
 USE_LIBTOOL=	yes
 
+REPLACE_PERL+=		scripts/dshbak
+
 CONFIGURE_ARGS+=	--with-ssh
 CONFIGURE_ARGS+=	--with-dshgroups=${PKG_SYSCONFBASE}/dsh/group
 CONFIGURE_ARGS+=	--with-machines=${PKG_SYSCONFDIR}/machines
