--- a/gcc48snapshot/Makefile
+++ b/gcc48snapshot/Makefile
@@ -11,7 +11,7 @@ PKGNAME=	${GCC_PKGNAME}-${GCC48S_DIST_VERSION}
 #PKGREVISION=	1
 CATEGORIES=	lang
 MASTER_SITES=	${MASTER_SITE_GNU:=gcc/snapshots/${GCC48S_DIST_VERSION}/}
-#MASTER_SITES=	ftp://ftp.fu-berlin.de/unix/languages/gcc/snapshots/${GCC_VERSION}/
+MASTER_SITES+=	ftp://ftp.fu-berlin.de/unix/languages/gcc/snapshots/${GCC48S_DIST_VERSION}/
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
