--- a/lldpd/Makefile
+++ b/lldpd/Makefile
@@ -13,13 +13,8 @@ LICENSE=	isc
 GNU_CONFIGURE=	yes
 USE_LIBTOOL=	yes
 USE_TOOLS+=	pkg-config
-USE_TOOLS+= awk
 USE_LANGUAGES+= c c++
-
-PKGCONFIG_OVERRIDE+=    libevent/libevent.pc.in
-PKGCONFIG_OVERRIDE+=    libevent/libevent_openssl.pc.in
-PKGCONFIG_OVERRIDE+=    libevent/libevent_pthreads.pc.in
-PKGCONFIG_OVERRIDE+=    src/lib/lldpctl.pc.in
+USE_GNU_READLINE= yes
 
 CONFIGURE_ARGS+=	--with-privsep-chroot=/nonexistent
 
@@ -30,6 +25,13 @@ PKG_USERS=		${LLDPD_USER}:${LLDPD_GROUP}
 PKG_HOME.${LLDPD_USER}=	/nonexistent
 PKG_GROUPS_VARS=	LLDPD_GROUP
 PKG_USERS_VARS=		LLDPD_USER
+
+PKGCONFIG_OVERRIDE+=    libevent/libevent.pc.in
+PKGCONFIG_OVERRIDE+=    libevent/libevent_openssl.pc.in
+PKGCONFIG_OVERRIDE+=    libevent/libevent_pthreads.pc.in
+PKGCONFIG_OVERRIDE+=    src/lib/lldpctl.pc.in
+
+BUILDLINK_API_DEPENDS.libevent+= libevent>=2.0.5
 
 .include "../../devel/libevent/buildlink3.mk"
 .include "../../devel/check/buildlink3.mk"
