--- a/trustedQSL/Makefile
+++ b/trustedQSL/Makefile
@@ -22,12 +22,6 @@ USE_LIBTOOL=		yes
 USE_CMAKE=		yes
 WRKSRC=			${WRKDIR}/${DISTNAME}
 
-SUBST_CLASSES+=		prefix
-SUBST_STAGE.prefix=	post-patch
-SUBST_FILES.prefix=	cmakemodules/FindBDB.cmake
-SUBST_MESSAGE.prefix=	Adjust PREFIX in CMake Find Berkley DB
-SUBST_VARS.prefix=	PREFIX
-
 .if !empty(X11_TYPE:Mmodular)
 SUBST_CLASSES+=		x11r7
 SUBST_STAGE.x11r7=	post-build
@@ -55,7 +49,11 @@ SUBST_SED.workaround=	-e 's,${WRKSRC}/src:${PREFIX}/lib:,${PREFIX}/lib:${WRKSRC}
 # usage in Makefile.am, without matching -R.
 
 do-configure:
-	(cd $(WRKSRC) ; cmake -DCMAKE_INSTALL_PREFIX=${PREFIX} .)
+	(cd $(WRKSRC) ; \
+	cmake \
+	-DCMAKE_INSTALL_PREFIX=${PREFIX} \
+	-DBDB_PREFIX=${PREFIX} \
+	.)
 
 .include "../../textproc/expat/buildlink3.mk"
 .include "../../databases/db5/buildlink3.mk"
