--- a/libfishsound/Makefile
+++ b/libfishsound/Makefile
@@ -2,6 +2,7 @@
 #
 
 DISTNAME=	libfishsound-1.0.0
+PKGREVISION=	1
 CATEGORIES=	audio
 MASTER_SITES=	http://downloads.xiph.org/releases/libfishsound/
 
@@ -19,5 +20,6 @@ PKGCONFIG_OVERRIDE+=	fishsound.pc.in
 .include "options.mk"
 
 .include "../../wip/liboggz/buildlink3.mk"
+.include "../../multimedia/libogg/buildlink3.mk"
 .include "../../audio/libsndfile/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
