(1) Correction to PKGNAME, following new emacs meta-pkg naming policy     like not emacs but emacs24.       As of writing this, the other idea came out that it     should take different name than other emacs packages,     meaning not emacs24 but emacs244 (?) (2) PLIST had PKGNAME referenced. Now references DISTNAME.

--- a/emacs-current/Makefile
+++ b/emacs-current/Makefile
@@ -3,7 +3,7 @@
 
 .include	"version.mk"
 DISTNAME=	emacs-${_EMACS_VERSION_MAJOR}.${_EMACS_VERSION_MINOR}.${_EMACS_VERSION_MICRO}
-#PKGNAME=	emacs-24.0.50
+PKGNAME=	emacs24-${_EMACS_VERSION_MAJOR}.${_EMACS_VERSION_MINOR}.${_EMACS_VERSION_MICRO}
 CATEGORIES=	editors
 MASTER_SITES=	#
 
@@ -40,6 +40,7 @@ BUILD_DEFS+=		VARBASE
 BUILD_DEFS+=		GAMEDATAMODE
 
 PLIST_SRC+=		PLIST
+PLIST_SUBST+=           DISTNAME=${DISTNAME}
 
 MAKE_DIRS_PERMS+=	${VARBASE}/games/emacs ${GAMEOWN:Q} ${GAMEGRP} ${GAMEDIRMODE:Q}
 CONF_FILES_PERMS+=	/dev/null ${VARBASE}/games/emacs/snake-scores ${GAMEOWN:Q} ${GAMEGRP:Q} ${GAMEDATAMODE:Q}
