Updated to latest stable release. There aren't any significant changes to the pkgsrc files to note other than another entry in the PLIST and the SConstruct patch was updated to reflect changes in the source file. From the package's release notes:
The 2.2.1 release fixes many bugs and adds a couple of new features. The most notable feature is "Auto-resume old play session", which is similar to "Suspending Play". Enable this option in the Config menu and now you can close ROMs or emulator anytime, next time the game state will be resumed from the closing point.

Common
Speed up HUD text drawing

Emulation
Finished mappers to boards conversion
Fixed mappers 99, 228, 18, 198, 24, 26, 69, 19
Mapper 115 - redesign according to the hardware tests
Fixed "you ling xing dong" by assigning to mapper 192
Fixed crash when four-screen bit is set after CRC check
UNIF: verbose/safe chunk loading, fixes some crashes

Lua
Removed "shadow pixels" from gui.text()
New Lua functions:

    gui.parsecolor()

New scripts:

    JumpingFCEUXWindow.lua

Win32
Fixed "Enter New Input" dialog (Hotkeys mapping)
Fixed zapper and mouse positioning in fullscreen
Remodel "Video config" dialog
Added "TV Aspect (4:3)"
Holding Shift when resizing FCEUX window inverts "Force integral factors" meaning
Fixed window regions redrawing
Added the option to define custom emulation speed (NES->Emulation Speed->Set Custom Speed)
Now Frame Advance timings (initial delay and speed) can be tweaked by user
Added Config->Enable->Auto-resume old play session
Moved "Config->Game Genie" to "Config->Enable->Game Genie ROM"
Play movie dialog shows New PPU in red if the required setting does not match
Fixed NameTable Viewer crash when the corresponding nametable RAM is not available on the cart
The number of active cheats is displayed on screen when a ROM is loaded
PPU/PAL/Input type changing is disabled when a movie is playing

TAS Editor
Fixed keyboard accelerators when editing Notes
Fixed Greenzone saving while emulator i

--- a/fceux/Makefile
+++ b/fceux/Makefile
@@ -1,7 +1,7 @@
 # $NetBSD$
 #
 
-DISTNAME=	fceux-2.2.0.src
+DISTNAME=	fceux-2.2.1.src
 PKGNAME=	${DISTNAME:S/.src//}
 CATEGORIES=	emulators
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=fceultra/}
@@ -11,7 +11,7 @@ HOMEPAGE=	http://fceux.com/
 COMMENT=	NES, Famicom, and Famicom Disk System (FDS) emulator
 LICENSE=	gnu-gpl-v2
 
-WRKSRC=			${WRKDIR}/${PKGBASE}
+WRKSRC=			${WRKDIR}/${PKGNAME_NOREV}
 USE_LANGUAGES=		c c++
 BUILD_DEPENDS+=		scons-[0-9]*:../../devel/scons
 USE_TOOLS+=		pkg-config
