--- a/SDL2/Makefile
+++ b/SDL2/Makefile
@@ -1,7 +1,7 @@
 # $NetBSD$
 #
 
-REVISION=	7046
+REVISION=	7140
 DISTNAME=	SDL-2.0.0-${REVISION}
 PKGNAME=	${DISTNAME:S/SDL/SDL2/1:S/0-/0./1}
 CATEGORIES=	devel
@@ -46,6 +46,7 @@ do-install:
 
 .include "../../devel/libusb/buildlink3.mk"
 .include "../../mk/dlopen.buildlink3.mk"
+.include "../../mk/pthread.buildlink3.mk"
 .include "../../x11/libXext/buildlink3.mk"
 .include "../../x11/libX11/buildlink3.mk"
 .include "../../converters/libiconv/buildlink3.mk"
