--- a/py-gevent/Makefile
+++ b/py-gevent/Makefile
@@ -20,6 +20,7 @@ do-test:
 
 BUILDLINK_API_DEPENDS.libevent+=libevent>=0.6
 
+.include "../../devel/py-cython/buildlink3.mk"
 .include "../../devel/libevent/buildlink3.mk"
 .include "../../lang/python/egg.mk"
 .include "../../mk/bsd.pkg.mk"
