*** empty log message ***

--- a/info2man/Makefile
+++ b/info2man/Makefile
@@ -15,7 +15,10 @@ NO_BUILD=		yes
 REPLACE_PERL=   	info2pod
 INSTALLATION_DIRS=	bin
 INFO2MAN_PM=		Pathname.pm Misc.pm Math.pm Sink.pm IO.pm GNUInfo.pm Source.pm Object.pm DEBUG.pm
-PKGNAME=		info2man-0
+PKGVERSION=		20001101
+PKGNAME=		info2man-${PKGVERSION}
+DIST_SUBDIR=		info2man
+
 
 
 do-install:
