Override SMF var

--- a/pgpool2/Makefile
+++ b/pgpool2/Makefile
@@ -29,6 +29,8 @@ BUILD_DIRS=		. sql
 
 EGDIR=			share/examples/pgpool2
 
+SMF_VAR=		postgresql-pgpool2
+
 PGPOOL_USER?=		pgpool
 PGPOOL_GROUP?=		${PGGROUP}
 PGGROUP?=		pgsql
