--- a/libclocale/Makefile
+++ b/libclocale/Makefile
@@ -1,7 +1,7 @@
 # $NetBSD$
 
-DISTNAME=	libclocale-alpha-20121224
-PKGNAME=	${DISTNAME:S/-alpha//1}
+DISTNAME=	libclocale-experimental-20130602
+PKGNAME=	${DISTNAME:S/-experimental//1}
 CATEGORIES=	devel
 MASTER_SITES=	http://libclocale.googlecode.com/files/
 
@@ -10,7 +10,7 @@ HOMEPAGE=	http://code.google.com/p/libclocale/
 COMMENT=	Library for cross-platform C locale functions
 LICENSE=	gnu-lgpl-v3
 
-WRKSRC=		${WRKDIR}/libclocale-20121224
+WRKSRC=		${WRKDIR}/libclocale-20130602
 GNU_CONFIGURE=	yes
 USE_LIBTOOL=	yes
 USE_TOOLS+=	msgfmt msgmerge pkg-config xgettext
