Replace py-{curses,readline,Tk}/buildlink3.mk with DEPENDS.
There are no buildlink3-relevant files here, just a loadable module.

--- a/py-guppy/Makefile
+++ b/py-guppy/Makefile
@@ -1,5 +1,4 @@
 # $NetBSD$
-#
 
 DISTNAME=	guppy-0.1.9
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
@@ -11,9 +10,10 @@ HOMEPAGE=	http://guppy-pe.sourceforge.net/
 COMMENT=	Guppy-PE -- A Python Programming Environment
 LICENSE=	mit
 
+DEPENDS+=	${PYPKGPREFIX}-Tk-[0-9]*:../../x11/py-Tk
+
 WRKSRC=	${WRKDIR}/guppy-0.1.9
 PYDISTUTILSPKG=	yes
 
 .include "../../lang/python/extension.mk"
-.include "../../x11/py-Tk/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
