--- a/pypod/Makefile
+++ b/pypod/Makefile
@@ -13,10 +13,11 @@ HOMEPAGE=		http://superduper.net/index.py?page=pypod
 COMMENT=		Python tools for manipluating iPod data
 LICENSE=		gnu-gpl-v2
 
+DEPENDS+=		${PYPKGPREFIX}-curses>=0nb4:../../devel/py-curses
+
 PYDISTUTILSPKG=		yes
 PYTHON_PATCH_SCRIPTS=	*.py */*.py
 
 .include "../../lang/python/application.mk"
 .include "../../lang/python/extension.mk"
-.include "../../devel/py-curses/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
