--- a/py-EditObj2/Makefile
+++ b/py-EditObj2/Makefile
@@ -1,5 +1,4 @@
 # $NetBSD$
-#
 
 DISTNAME=	EditObj2-0.4
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
@@ -12,6 +11,8 @@ HOMEPAGE=	http://home.gna.org/oomadness/en/editobj/index.html
 COMMENT=	EditObj2 is a dialog box generator for Python objects
 LICENSE=	gnu-gpl-v2
 
+DEPENDS+=	${PYPKGPREFIX}-Tk-[0-9]*:../../x11/py-Tk
+
 USE_LANGUAGES=	# none
 PYDISTUTILSPKG=         yes
 
@@ -20,7 +21,6 @@ do-test:
 
 
 .include "../../devel/py-gobject/buildlink3.mk"
-.include "../../x11/py-Tk/buildlink3.mk"
 .include "../../x11/py-gtk2/buildlink3.mk"
 .include "../../x11/py-qt4/buildlink3.mk"
 .include "../../lang/python/extension.mk"
