Use variable instead of hardcoding the package's name in three places.

--- a/py-ejson/Makefile
+++ b/py-ejson/Makefile
@@ -2,10 +2,11 @@
 #
 
 DISTNAME=	0.1.5
-PKGNAME=	${PYPKGPREFIX}-ejson-${DISTNAME}
+PKG=		ejson
+PKGNAME=	${PYPKGPREFIX}-${PKG}-${DISTNAME}
 CATEGORIES=	textproc
 MASTER_SITES=	https://github.com/Yipit/ejson/archive/
-DIST_SUBDIR=	ejson-${DISTNAME}
+DIST_SUBDIR=	${PKG}-${DISTNAME}
 FETCH_USING=	curl
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -13,7 +14,7 @@ HOMEPAGE=	https://github.com/Yipit/ejson/
 COMMENT=	Extensible JSON serializers and deserializers
 LICENSE=	gnu-lgpl-v3
 
-WRKSRC=		${WRKDIR}/ejson-${PKGVERSION}
+WRKSRC=		${WRKDIR}/${PKG}-${PKGVERSION}
 USE_LANGUAGES=	# none
 
 .include "../../lang/python/distutils.mk"
