--- a/py-python-application/Makefile
+++ b/py-python-application/Makefile
@@ -13,5 +13,6 @@ LICENSE=	gnu-lgpl-v2
 
 USE_LANGUAGES=	# none
 
+DEPENDS+=	${PYPKGPREFIX}-ZopeInterface-[0-9]*:../../devel/py-ZopeInterface
 .include "../../lang/python/distutils.mk"
 .include "../../mk/bsd.pkg.mk"
