Updated to latest release. No pkgsrc changes. From CHANGELOG:
0.2.3

 * Fixed bug #3
 * Fixed bug in benchmarking script

0.2.4

 * Added support for py-yajl (Thanks Benjamin Anderson)
 * Improved benchmark script to test serialization performance and
   to use real life data for tests.

0.2.5

 * Added loads and dumps methods so anyjson can be used interchangably
   with the stdlib json module. Note: The original methods are still
   in place. Nothing from the 0.2.4 API is changed, removed or deprecated
   in this release.

0.3

 * Added support for python3

0.3.1

 * Added deprecation warning for cjson and made it the least preferred
   implementation. See: http://pypi.python.org/pypi/python-cjson/1.0.5

0.3.2

 * Added support for buffer objects

0.3.3

 * Fixed bug in buffer object support related to differences between
   stringIO and cStringIO

--- a/py-anyjson/Makefile
+++ b/py-anyjson/Makefile
@@ -1,15 +1,15 @@
 # $NetBSD$
 #
 
-DISTNAME=	anyjson-0.2.3
+DISTNAME=	anyjson-0.3.3
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-CATEGORIES=	textproc python
+CATEGORIES=	textproc
 MASTER_SITES=	http://pypi.python.org/packages/source/a/anyjson/
 
 MAINTAINER=	pkgsrc-users@netbsd.org
-HOMEPAGE=	http://pypi.python.org/pypi/anyjson
+HOMEPAGE=	http://bitbucket.org/runeh/anyjson/
 COMMENT=	Wraps the JSON implementation available in a common interface
-LICENSE=		modified-bsd
+LICENSE=	modified-bsd
 
 USE_LANGUAGES=	# none
 
