Use SUBST framework to "fix" hardcoding of old major version of gnutls shared library. Also, fix hardcoded path to libgnutls. Kludgetastic. Package still requires libgnutls-extras library.

--- a/py-python-gnutls/Makefile
+++ b/py-python-gnutls/Makefile
@@ -11,6 +11,13 @@ HOMEPAGE=	http://ag-projects.com/
 COMMENT=	Python wrapper for the GNUTLS library
 LICENSE=	gnu-lgpl-v2
 
+SUBST_CLASSES+=		gnutls
+SUBST_FILES.gnutls=	gnutls/library/__init__.py
+SUBST_MESSAGE.gnutls=	Fixing gnutls library version.
+SUBST_SED.gnutls=	-e 's/26/28/g'
+SUBST_SED.gnutls+=	-e "s|/usr/local/lib']|${PREFIX}/lib']|1"
+SUBST_STAGE.gnutls=	post-patch
+
 .include "../../security/gnutls/buildlink3.mk"
 .include "../../lang/python/distutils.mk"
 .include "../../mk/bsd.pkg.mk"
