Updated MASTER_SITES. Add static option to build.

--- a/libcerror/Makefile
+++ b/libcerror/Makefile
@@ -1,17 +1,19 @@
 # $NetBSD$
 #
 
-DISTNAME=	libcerror-alpha-20130411
+DATESTAMP=	20130411
+DISTNAME=	libcerror-alpha-${DATESTAMP}
 PKGNAME=	${DISTNAME:S/-alpha//1}
 CATEGORIES=	devel
-MASTER_SITES=	http://libcerror.googlecode.com/files/
+MASTER_SITES=	https://googledrive.com/host/0B3fBvzttpiiSV2xnMTZjSk5WVTg/
+FETCH_USING=	curl
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://code.google.com/p/libcerror/
 COMMENT=	Library for cross-platform C error functions
 LICENSE=	gnu-lgpl-v3
 
-WRKSRC=		${WRKDIR}/libcerror-20130411
+WRKSRC=		${WRKDIR}/libcerror-${DATESTAMP}
 GNU_CONFIGURE=	yes
 USE_LIBTOOL=	yes
 USE_TOOLS+=	msgfmt msgmerge pkg-config xgettext
