--- a/xf86-video-dummy/Makefile
+++ b/xf86-video-dummy/Makefile
@@ -14,6 +14,12 @@ GNU_CONFIGURE=	yes
 USE_LIBTOOL=	yes
 USE_TOOLS+=	pkg-config
 
+.include "../../mk/bsd.prefs.mk"
+
+.if ${OPSYS} == "SunOS"
+CONFIGURE_ENV+= DRIVER_MAN_SUFFIX=4
+.endif
+
 .include "../../x11/xf86dgaproto/buildlink3.mk"
 .include "../../x11/fontsproto/buildlink3.mk"
 .include "../../x11/xproto/buildlink3.mk"
