added use of bash.

--- a/gsmartcontrol/Makefile
+++ b/gsmartcontrol/Makefile
@@ -2,6 +2,7 @@
 #
 
 DISTNAME=	gsmartcontrol-0.8.7
+PKGREVISION=	1
 CATEGORIES=	sysutils
 MASTER_SITES=	http://artificialtime.com/gsmartcontrol/
 EXTRACT_SUFX=	.tar.bz2
@@ -16,6 +17,8 @@ DEPENDS+=	smartmontools>=5.40:../../sysutils/smartmontools
 GNU_CONFIGURE=	yes
 USE_LANGUAGES=	c c++
 USE_TOOLS+=	pkg-config
+USE_TOOLS+=	bash:run
+REPLACE_BASH=	data/gsmartcontrol-root.in
 
 .include "../../sysutils/desktop-file-utils/desktopdb.mk"
 .include "../../x11/gtkmm/buildlink3.mk"
